--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -10,29 +10,27 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    # Start DynamoDB Local service container
     services:
       dynamodb:
         image: amazon/dynamodb-local
         ports:
-          - 8000:8000   # Host:Container port
-        # Remove healthcheck for simplicity
+          - 8000:8000   # Map DynamoDB Local inside CI runner
         options: >-
-          --entrypoint "java -Djava.library.path=./DynamoDBLocal_lib -jar DynamoDBLocal.jar -sharedDb -port 8000"
+          --health-cmd "curl --silent --fail http://localhost:8000/shell/ || exit 1"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
 
     steps:
-      # 1. Checkout repo
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # 2. Set up Java
       - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '21'
 
-      # 3. Cache Maven dependencies
       - name: Cache Maven packages
         uses: actions/cache@v3
         with:
@@ -41,38 +39,20 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven-
 
-      # 4. Wait a few seconds for DynamoDB Local to start
-      - name: Wait for DynamoDB
-        run: sleep 10
+      - name: Wait for DynamoDB Local
+        run: sleep 15
 
-      # 5. Build project
       - name: Build with Maven
         run: mvn clean package -DskipTests
 
-      # 6. Run tests (your code uses port 8000)
       - name: Run tests
         run: mvn test
 
-      # 7. Build Docker image
       - name: Build Docker image
         run: docker build -t iot-smarthome-dashboard .
 
-      # 8. Upload JAR as artifact
       - name: Upload JAR artifact
         uses: actions/upload-artifact@v4
         with:
           name: iot-app-jar
           path: ./target/iot-smarthome-dashboard-1.0-SNAPSHOT.jar
-
-      # 9. (Optional) Push Docker image to GitHub Container Registry
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Tag and Push Docker image
-        run: |
-          docker tag iot-smarthome-dashboard ghcr.io/${{ github.repository }}/iot-smarthome-dashboard:latest
-          docker push ghcr.io/${{ github.repository }}/iot-smarthome-dashboard:latest
