--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -42,9 +42,22 @@ jobs:
 
       - name: Install AWS CLI
         run: |
-          curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-          unzip awscliv2.zip
-          sudo ./aws/install
+          echo "Installing AWS CLI v2..."
+          curl -f "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" || {
+            echo "Failed to download AWS CLI, trying alternative..."
+            sudo apt-get update -y
+            sudo apt-get install -y awscli
+            aws --version
+            exit 0
+          }
+          
+          unzip -q awscliv2.zip
+          sudo ./aws/install || {
+            echo "Failed to install AWS CLI v2, using package manager..."
+            sudo apt-get update -y
+            sudo apt-get install -y awscli
+          }
+          
           aws --version
 
       - name: Cache Maven packages
@@ -61,48 +74,76 @@ jobs:
         run: |
           echo "Verifying DynamoDB Local is running..."
           
-          # Check container logs first
-          echo "Container logs:"
-          docker logs dynamodb-local || echo "Failed to get logs"
+          # Check container status
+          echo "Container status:"
+          docker ps | grep dynamodb || echo "Container not found in running state"
+          
+          # Check container logs
+          echo "Container logs (last 10 lines):"
+          docker logs --tail 10 dynamodb-local 2>&1 || echo "Failed to get logs"
           
           echo "Testing DynamoDB Local connection..."
-          for i in {1..8}; do
+          DYNAMODB_READY=false
+          
+          for i in {1..6}; do
             echo "Attempt $i: Testing connection to DynamoDB Local"
             
-            # Test with AWS CLI
-            if aws dynamodb list-tables --endpoint-url http://localhost:8000 --region us-east-1 > /dev/null 2>&1; then
-              echo "✅ DynamoDB Local is accessible via AWS CLI!"
-              # Create a test table to ensure it's working
+            # Test 1: Basic HTTP connectivity
+            if curl -f -s http://localhost:8000/ > /dev/null 2>&1; then
+              echo "✅ DynamoDB Local HTTP endpoint is responding!"
+              DYNAMODB_READY=true
+              break
+            fi
+            
+            # Test 2: Try with wget as alternative
+            if wget -q --spider http://localhost:8000/ 2>/dev/null; then
+              echo "✅ DynamoDB Local is accessible via wget!"
+              DYNAMODB_READY=true
+              break
+            fi
+            
+            # Test 3: AWS CLI if available
+            if command -v aws >/dev/null 2>&1; then
+              if aws dynamodb list-tables --endpoint-url http://localhost:8000 --region us-east-1 > /dev/null 2>&1; then
+                echo "✅ DynamoDB Local is accessible via AWS CLI!"
+                DYNAMODB_READY=true
+                break
+              fi
+            fi
+            
+            echo "Waiting 6 seconds before next attempt..."
+            sleep 6
+          done
+          
+          if [ "$DYNAMODB_READY" = true ]; then
+            echo "✅ DynamoDB Local is ready for testing!"
+            # Try to create a test table if AWS CLI is available
+            if command -v aws >/dev/null 2>&1; then
               aws dynamodb create-table \
-                --table-name test-table \
+                --table-name test-connection \
                 --attribute-definitions AttributeName=id,AttributeType=S \
                 --key-schema AttributeName=id,KeyType=HASH \
                 --billing-mode PAY_PER_REQUEST \
                 --endpoint-url http://localhost:8000 \
-                --region us-east-1 > /dev/null 2>&1 || true
-              echo "Test table creation attempted"
-              break
+                --region us-east-1 > /dev/null 2>&1 && echo "Test table created successfully" || echo "Test table creation failed (normal)"
             fi
-            
-            if [ $i -eq 8 ]; then
-              echo "❌ DynamoDB Local failed to start after 8 attempts"
-              echo "Final container logs:"
-              docker logs dynamodb-local || true
-              echo "Container status:"
-              docker ps -a | grep dynamodb || true
-              # Don't fail the build, just warn
-              echo "Continuing without DynamoDB Local..."
-            fi
-            
-            echo "Waiting 8 seconds before next attempt..."
-            sleep 8
-          done
+          else
+            echo "⚠️ DynamoDB Local not responding, but continuing with build..."
+            echo "Final container logs:"
+            docker logs dynamodb-local 2>&1 || true
+          fi
 
       - name: Set AWS credentials for testing
         run: |
-          aws configure set aws_access_key_id test --profile default
-          aws configure set aws_secret_access_key test --profile default
-          aws configure set region us-east-1 --profile default
+          if command -v aws >/dev/null 2>&1; then
+            echo "Configuring AWS CLI with test credentials..."
+            aws configure set aws_access_key_id test --profile default || echo "Failed to set access key"
+            aws configure set aws_secret_access_key test --profile default || echo "Failed to set secret key"
+            aws configure set region us-east-1 --profile default || echo "Failed to set region"
+            echo "AWS CLI configured for local testing"
+          else
+            echo "AWS CLI not available, skipping configuration"
+          fi
         env:
           AWS_ACCESS_KEY_ID: test
           AWS_SECRET_ACCESS_KEY: test
