Auto-start DynamoDB Local in Codespaces for NoSQL Workbench integration
- Updated devcontainer.json to use setup script
- Created setup.sh to auto-start DynamoDB Local on port 8000
- Configured AWS CLI with test credentials
- Added port forwarding for local NoSQL Workbench access
- Includes verification and helpful startup messages

Now DynamoDB Local will be ready on port 8000 when Codespace starts!

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,12 +20,14 @@
   "forwardPorts": [5555, 8000],
   "portsAttributes": {
     "5555": {
-      "label": "Smart Home App"
+      "label": "Smart Home App",
+      "protocol": "http"
     },
     "8000": {
-      "label": "DynamoDB Local"
+      "label": "DynamoDB Local",
+      "protocol": "http"
     }
   },
 
-  "postCreateCommand": "mvn clean compile"
+  "postCreateCommand": "bash .devcontainer/setup.sh"
 }
