🌍 Cloud-ready devcontainer with public access
ENHANCED DEVCONTAINER:
- Set ports to PUBLIC visibility for global access
- Auto-forward notifications for port 5555
- Added cloud-ready messaging and setup
- Optimized for 'run anywhere' experience

ADDED FULL STACK:
- Docker Compose for complete deployment
- Multi-stage Dockerfile for production builds
- Easy commands for cloud deployment

READY FOR GLOBAL ACCESS:
- Public URLs will be auto-generated
- Access from any device, anywhere
- Zero local machine dependency

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-  "name": "IoT Smart Home Dashboard",
+  "name": "IoT Smart Home Dashboard - Cloud Ready",
   "image": "mcr.microsoft.com/devcontainers/java:21",
   
   "features": {
@@ -13,21 +13,30 @@
         "vscjava.vscode-java-pack",
         "redhat.java",
         "ms-azuretools.vscode-docker"
-      ]
+      ],
+      "settings": {
+        "terminal.integrated.defaultProfile.linux": "bash",
+        "java.debug.settings.hotCodeReplace": "auto"
+      }
     }
   },
 
   "forwardPorts": [5555, 8000],
   "portsAttributes": {
     "5555": {
-      "label": "Smart Home App",
-      "protocol": "http"
+      "label": "🏠 Smart Home App",
+      "protocol": "http",
+      "visibility": "public",
+      "onAutoForward": "notify"
     },
     "8000": {
-      "label": "DynamoDB Local",
-      "protocol": "http"
+      "label": "🗄️ DynamoDB Local",
+      "protocol": "http",
+      "visibility": "public",
+      "onAutoForward": "silent"
     }
   },
 
-  "postCreateCommand": "bash .devcontainer/setup.sh"
+  "postCreateCommand": "bash .devcontainer/setup.sh",
+  "remoteUser": "vscode"
 }
